--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
-dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
-dioxus-html = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
-dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
-dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829", features = ["transparent"] }
-dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
-fermi = { git = "https://github.com/DioxusLabs/dioxus", rev = "60ee829" }
+dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+dioxus-hooks ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+dioxus-html ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+dioxus-router ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+dioxus-desktop = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry", features = ["transparent"] }
+dioxus-core ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+fermi ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
 
 tracing-subscriber = { version = "0.3.17", features = [ "fmt"] }
+
+muda = "0.9.4"
