--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
-dioxus-hooks ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
-dioxus-html ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
-dioxus-router ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
-dioxus-desktop = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry", features = ["transparent"] }
-dioxus-core ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
-fermi ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
+dioxus = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
+dioxus-hooks ={ git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
+dioxus-html ={ git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
+dioxus-router ={ git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
+dioxus-desktop = { git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2", features = ["transparent"] }
+dioxus-core ={ git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
+fermi ={ git = "https://github.com/satellite-im/dioxus", rev = "1dba57f39db8485ccdc03f3a6c11a6fcbb2f87f2" }
 
 tracing-subscriber = { version = "0.3.17", features = [ "fmt"] }
 
